# forge

./: .env.example  .gitignore  INNER_LOOP_ORCHESTRATION.md  Implementation Process.md  MEMORIES.md  MEMORY_ARCHITECTURE.md  README.md  library_integration_review.md  memory.yaml  planner.yaml  preserve.md  pyproject.toml
.agents/: localizer.yaml
config/: agent.yml  database.yml  logging.yml  memory.yml
constitution/: base.yml  interaction_policy.yml  safety.yml  tool_policy.yml
docs/inner_loop/: 00_session_setup.md  01_context_planning.md  02_execution.md  03_evaluation.md  04_reflection.md  05_episode_persistence.md  06_l1_storage_schema.md  README.md
docs/memory/: L2_L4_STORAGE_SCHEMA.md
docs/meta_loop/: 00_trigger_evidence.md  01_diagnosis_scope.md  02_proposal_drafting.md  03_preflight_review.md  04_hitl_approval.md  05_controlled_execution.md  06_validation_audit.md  README.md
docs/outer_loop/: 00_trigger_collection.md  01_candidate_consolidation.md  02_l1_to_l2.md  03_l2_to_l3.md  04_metrics_self_model.md  05_audit_growth_control.md  06_cache_checkpoint.md  07_meta_trigger.md  README.md
identity/: capabilities.yml  identity.yml  self_model.yml
large_tool_results/: a767054f-5579-48a6-a595-73b75202348d
memory/: README.md  memory.db
runs/: README.md
src/agent/: main.py  orchestrator.py  runtime.py
src/agent/cognition/: __init__.py  context_builder.py  decision.py  planner.py  reasoner.py  reflection_loop.py
src/agent/llm/: __init__.py  client.py  prompts.py  response_parser.py
src/agent/memory/: __init__.py  consolidation.py  manager.py  policies.py  ranking.py  reflection.py  schemas.py
src/agent/meta_loop/: __init__.py  change_proposal.py  (+6 more)
tests/: test_adaptive_n.py  test_assumption_violation.py  test_cognition.py  test_coherence_index.py  test_constitution.py  test_constitution_yaml.py  test_episodic_memory.py  test_growth_actions.py  test_hitl_gate.py  test_identity.py  test_inner_loop.py  test_llm.py  test_memory_manager.py  test_meta_loop.py  test_outer_loop.py  test_procedural_memory.py  test_schemas.py  test_semantic_memory.py  test_tools.py  test_utils.py
(+65 files in other folders)
